tests/baselines/reference/objectSpreadStrictNull.errors.txt
tests/cases/conformance/types/spread/objectSpreadStrictNull.ts(14,9): error TS2322: Type '{ sn: 数字 | 未定; }' is not assignable to type '{ sn: 文字 | 数字; }'.
  Types of property 'sn' are incompatible.
    Type '数字 | 未定' is not assignable to type '文字 | 数字'.
      Type '未定' is not assignable to type '文字 | 数字'.
tests/cases/conformance/types/spread/objectSpreadStrictNull.ts(15,9): error TS2322: Type '{ sn: 数字 | 未定; }' is not assignable to type '{ sn: 文字 | 数字; }'.
  Types of property 'sn' are incompatible.
    Type '数字 | 未定' is not assignable to type '文字 | 数字'.
      Type '未定' is not assignable to type '文字 | 数字'.
tests/cases/conformance/types/spread/objectSpreadStrictNull.ts(18,9): error TS2322: Type '{ sn: 文字 | 数字 | 未定; }' is not assignable to type '{ sn: 文字 | 数字 | 真假; }'.
  Types of property 'sn' are incompatible.
    Type '文字 | 数字 | 未定' is not assignable to type '文字 | 数字 | 真假'.
      Type '未定' is not assignable to type '文字 | 数字 | 真假'.
tests/cases/conformance/types/spread/objectSpreadStrictNull.ts(28,7): error TS2322: Type '{ title: 未定; yearReleased: 数字; }' is not assignable to type 'Movie'.
  Types of property 'title' are incompatible.
    Type '未定' is not assignable to type '文字'.
tests/cases/conformance/types/spread/objectSpreadStrictNull.ts(42,5): error TS2322: Type '{ foo: 数字 | 未定; bar: 文字 | 未定; }' is not assignable to type 'Fields'.
  Types of property 'foo' are incompatible.
    Type '数字 | 未定' is not assignable to type '数字'.
      Type '未定' is not assignable to type '数字'.


==== tests/cases/conformance/types/spread/objectSpreadStrictNull.ts (5 errors) ====
    function f(
        definiteBoolean: { sn: boolean },
        definiteString: { sn: string },
        optionalString: { sn?: string },
        optionalNumber: { sn?: number },
        undefinedString: { sn: string | undefined },
        undefinedNumber: { sn: number | undefined }) {
        // optional
        let optionalUnionStops: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...optionalNumber };
        let optionalUnionDuplicates: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...optionalString, ...optionalNumber };
        let allOptional: { sn?: string | number } = { ...optionalString, ...optionalNumber };
    
        // undefined
        let undefinedUnionStops: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...undefinedNumber };
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ sn: 数字 | 未定; }' is not assignable to type '{ sn: 文字 | 数字; }'.
!!! error TS2322:   Types of property 'sn' are incompatible.
!!! error TS2322:     Type '数字 | 未定' is not assignable to type '文字 | 数字'.
!!! error TS2322:       Type '未定' is not assignable to type '文字 | 数字'.
        let undefinedUnionDuplicates: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...undefinedString, ...undefinedNumber };
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ sn: 数字 | 未定; }' is not assignable to type '{ sn: 文字 | 数字; }'.
!!! error TS2322:   Types of property 'sn' are incompatible.
!!! error TS2322:     Type '数字 | 未定' is not assignable to type '文字 | 数字'.
!!! error TS2322:       Type '未定' is not assignable to type '文字 | 数字'.
        let allUndefined: { sn: string | number | undefined } = { ...undefinedString, ...undefinedNumber };
    
        let undefinedWithOptionalContinues: { sn: string | number | boolean } = { ...definiteBoolean, ...undefinedString, ...optionalNumber };
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ sn: 文字 | 数字 | 未定; }' is not assignable to type '{ sn: 文字 | 数字 | 真假; }'.
!!! error TS2322:   Types of property 'sn' are incompatible.
!!! error TS2322:     Type '文字 | 数字 | 未定' is not assignable to type '文字 | 数字 | 真假'.
!!! error TS2322:       Type '未定' is not assignable to type '文字 | 数字 | 真假'.
    }
    
    type Movie = {
        title: string;
        yearReleased: number;
    }
    
    const m = { title: "The Matrix", yearReleased: 1999 };
    // should error here because title: undefined is not assignable to string
    const x: Movie = { ...m, title: undefined };
          ~
!!! error TS2322: Type '{ title: 未定; yearReleased: 数字; }' is not assignable to type 'Movie'.
!!! error TS2322:   Types of property 'title' are incompatible.
!!! error TS2322:     Type '未定' is not assignable to type '文字'.
    
    interface Fields {
        foo: number;
        bar: string;
    }
    interface NearlyPartialFields {
        foo: number | undefined;
        bar: string | undefined;
    }
    function g(fields: Fields, partialFields: Partial<Fields>, nearlyPartialFields: NearlyPartialFields) {
        // ok, undefined is stripped from optional properties when spread
        fields = { ...fields, ...partialFields };
        // error: not optional, undefined remains
        fields = { ...fields, ...nearlyPartialFields };
        ~~~~~~
!!! error TS2322: Type '{ foo: 数字 | 未定; bar: 文字 | 未定; }' is not assignable to type 'Fields'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '数字 | 未定' is not assignable to type '数字'.
!!! error TS2322:       Type '未定' is not assignable to type '数字'.
    }
    